<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                        http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>PARSER_NS</groupId>
  <artifactId>jtreesitter-KEBAB_PARSER_NAME</artifactId>
  <name>JTreeSitter CAMEL_PARSER_NAME</name>
  <version>PARSER_VERSION</version>
  <description>PARSER_DESCRIPTION</description>
  <url>PARSER_URL</url>
  <licenses>
    <license>
      <name>PARSER_LICENSE</name>
      <url>https://spdx.org/licenses/PARSER_LICENSE.html</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>PARSER_AUTHOR_NAME</name>
      <email>PARSER_AUTHOR_EMAIL</email>
      <url>PARSER_AUTHOR_URL</url>
    </developer>
  </developers>
  <scm>
    <url>PARSER_URL</url>
    <connection>scm:git:git://PARSER_URL_STRIPPED.git</connection>
    <developerConnection>scm:git:ssh://PARSER_URL_STRIPPED.git</developerConnection>
  </scm>
  <properties>
    <maven.compiler.release>22</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.deploy.skip>true</maven.deploy.skip>
  </properties>
  <dependencies>
    <dependency>
      <groupId>io.github.tree-sitter</groupId>
      <artifactId>jtreesitter</artifactId>
      <version>0.25.4</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.13.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>bindings/java/main</sourceDirectory>
    <testSourceDirectory>bindings/java/test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.3</version>
        <configuration>
          <reportsDirectory>
            ${project.build.directory}/reports/surefire
          </reportsDirectory>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>
        <executions>
          <execution>
            <id>attach-javadoc</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <show>public</show>
          <nohelp>true</nohelp>
          <noqualifier>true</noqualifier>
          <doclint>all,-missing</doclint>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
